--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,7 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "react-scripts": "^2.1.3",
+    "web-vitals": "^1.1.2",
     "axios": "^1.5.0",
+    "firebase": "^10.4.0",
     "gsap": "^3.12.2",
     "mapbox-gl": "^2.15.0",
     "react": "^18.2.0",
